# RAC

./: .gitignore  LICENSE.  RAC_A100_Benchmark.ipynb  RAC_vs_MAC_2026.docx  README.md  TESTING.md  agent.md  index.html  lake-manifest.json  lakefile.lean  rac.h  rac_benchmark.cu  rac_benchmark.sh  rac_cuda.cu  rac_fpga_u250.h  rac_hip.cpp  rac_vs_mac_benchmark.py  test_hybrid.py  test_kernel_minimal.py  test_rac_primitives.cu
.github/workflows/: lean.yml
bench/: README.md  bench_harness.sh  bench_rac_transformer.c  bench_three_paths.py  configure.sh  fetch_model.py  run_llama_cpp.sh  run_tinygrad.py  safetensors_reader.c  safetensors_reader.h  test_safetensors.c
bench/configs/: llama_cpp.yaml  tinygrad.yaml
engine/: .gitignore  CMakeLists.txt  rac_engine.h  rac_engine_audio.c  rac_engine_audio.h  rac_engine_camera.c  rac_engine_camera.h  rac_engine_core.c  rac_engine_core.h  rac_engine_demo.c  rac_engine_ecs.c  rac_engine_ecs.h  rac_engine_input.c  rac_engine_input.h  rac_engine_light.c  rac_engine_light.h  rac_engine_mesh.c  rac_engine_mesh.h  rac_engine_render.c  rac_engine_render.h  rac_engine_scene.c  rac_engine_scene.h  rac_engine_sprite.c  rac_engine_sprite.h  sprite_pipeline.py
engine/assets/: character_sheet.raw  sprite_badger.h
engine/tests/: test_engine_audio.c  test_engine_ecs.c  test_engine_mesh.c  test_engine_render.c
formal_proofs/Composite/: TransformerBlockChain.lean
formal_proofs/Cordic/: ArctanFacts.lean  Convergence.lean  GainCompensation.lean  MacEquivalence.lean  PrecisionKnob.lean
formal_proofs/DSP/: ComplexMulCorrectness.lean  DCTOrthogonality.lean
formal_proofs/Distributed/: MpiScatterGather.lean
formal_proofs/Hardware/: CordicQ16Equivalence.lean  ExtendedPrecision.lean  HwSwEquivalence.lean  SystolicArrayTiming.lean  XracMicrocode.lean
formal_proofs/HyperbolicCordic/: Convergence.lean  ExpTanhBounds.lean
formal_proofs/Numerical/: BatchRotation.lean  CosineSimilarityBounds.lean  ErrorAccumulation.lean  FixedPointOverflow.lean  QuantizationRoundTrip.lean  SoftmaxDistribution.lean
formal_proofs/Physics/: ChainedNorms.lean  CollisionDetectionSoundness.lean  ConstraintSolverConvergence.lean  IntegratorOrders.lean  QuaternionAlgebra.lean  SlerpCorrectness.lean
formal_proofs/TableLookup/: Atan2Correctness.lean  SinCosInterpolation.lean
formal_proofs/Transformer/: AttentionCorrectness.lean  LayerNormPostConditions.lean  MatmulErrorBound.lean  RoPEEquivalence.lean  RoPEGivens.lean  RtlFsmCorrectness.lean
formal_proofs/Trig/: ArctanBounds.lean
lib/: CMakeLists.txt  coverage.sh
lib/Testing/: cov_transformer.c
lib/c/: bench_rac_alu.c  bench_rac_vs_blas.c  rac_alu.c  rac_alu.h  rac_avx2.c  rac_avx2.h  rac_avx512_kern.S  rac_blas.h  rac_blas_l1.c  rac_blas_l2.c  rac_blas_l3.c  rac_cpu.c  rac_cpu.h  rac_hal.c  rac_hal.h  rac_mpi.c  rac_physics.c  rac_physics.h  rac_physics_collision.c  rac_physics_constraints.c  rac_physics_particles.c  rac_physics_softbody.c  rac_physics_world.c  rac_q8_0.c  rac_q8_0.h  rac_ucode.c  rac_ucode.h  rac_xrac.c  rac_xrac.h  rac_zen3_kern.S  test_rac_alu.c  test_rac_blas_l1.c  test_rac_blas_l2.c  test_rac_blas_l3.c  test_rac_lib_bvt.c  test_rac_lib_dvt.c  test_rac_lib_e2e.c  test_rac_longrun.c  test_rac_physics_bvt.c  test_rac_thread_scaling.c  (+2 more)
lib/cpp/: rac.hpp
lib/rust/: Cargo.toml
lib/rust/benches/: matmul.rs
lib/rust/src/: activation.rs  cordic.rs  lib.rs  matmul.rs  transformer.rs
lib/rust/src/blas/: l1.rs  l2.rs  l3.rs  mod.rs
rac_torch/: README.md  build_hip.sh  rac_blas.py  rac_kernels.hip  rac_torch.cu  rac_torch.py  rac_torch_bind.cpp  setup.py  test_rac_bvt.py  test_rac_dvt.py  test_rac_e2e.py  test_rac_perf.py  test_rac_torch.py
rtl/: RAC-DSP-DATASHEET.md  README.md  cordic_atan.mem  cordic_atanh.mem  cordic_coarse_lut.mem  gen_coarse_lut.py  rac_alu_top.v  rac_cordic_core.v  rac_dsp.v  rac_systolic_array.v
sim/: .gitignore  Makefile  README.md  cosim.py  cosim_gemm.py  gen_gemm_vectors.py  gen_vectors.py  rac_dsp_core.c  rac_dsp_core.h  rac_dsp_ref.c  rac_systolic_ref.c  tb_rac_dsp.v  tb_rac_systolic_array.v
